# MyNote

./: .gitignore  README.md  zk-snark记录1-Circom.md
Search/TestCDemo/TestCDemo/EasyBitcoin/: .gitignore  .travis.yml  Base58CheckDecode.h  BtcPrivateKey.cpp  BtcPrivateKey.h  BtcPublicKey.cpp  BtcPublicKey.h  ByteArray.cpp  ByteArray.h  CMakeLists.txt  Constants.h  Conversions.cpp  Conversions.h  Crypto.cpp  Crypto.h  Doxyfile  LICENSE  README.md  ScriptExecutor.cpp  ScriptExecutor.h  Transaction.cpp  Transaction.h  TransactionInput.cpp  TransactionInput.h  TransactionOutput.cpp  TransactionOutput.h
Wallet/Old-coinstart_wallet_extension/: README.md  pubspec.yaml
sigma protocol/test/: test_schnorr.py
sigmaProtocol/: settings.py
sigmaProtocol/test/: test1OfNORProof.py  testORProof.py  test_schnorr.py  test_sigma.py  utils.py
sigma协议代码/test/: test_basic.py  test_sigma.py
zkrangeproof(go & java)/: .project
承诺/: PedersenCommitment.md
智能合约&加密算法Code/Docs-ETH&BSC/: SUMMARY.md  cronogram.md
智能合约&加密算法Code/ETH_签名工具/: BulkSend.sol  ERC20-ABI.json  MY_ERC20.sol  README.md
智能合约&加密算法Code/RSA-accumulator-master/: helpfunctions.py
智能合约&加密算法Code/rsa-accumulator/: README.md  acc.js  index.js  package.json
智能合约&加密算法Code/代理可升级智能合约proxy-solidity-smart-contract-master/: package-lock.json  package.json
智能合约&加密算法Code/加密算法py源码/: ZK_equality.py  attacker.vy  hash_collision.py  hash_preimage.py  linked_list.py  mining_simulation.py  models.py  order_book.py  params.py  sign.py  skeleton_solution.py  test_orders.py  (+1 more)
智能合约实现白名单的3个机制(markle tree)/: generateMerkleRoot.js
(+503 files in other folders)
